<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical" 
        android:gravity="center_vertical|center_horizontal" 
        android:paddingLeft="10dp" 
        android:paddingRight="10dp" android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orange_envelope_big" >
            
        </ImageView>


        <EditText
            android:id="@+id/username_text"
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:imeOptions="actionNext"
			android:singleLine="true"
			android:selectAllOnFocus="true" >
		</EditText>


        <EditText
            android:id="@+id/password_text"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" 
            android:singleLine="true"
            android:selectAllOnFocus="true">
			<requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" android:layout_weight="1"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" android:layout_weight="1"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>